syntax = "proto2";

package chimp.protobuf;

// UIID = String | Int       XY = (Int,Int)
// AppEvent = Click(UUID) | LongClick(UUID) | Drag(UUID,XY) | Pinch(XY,XY) | Swipe(XY,XY) | Type(UUID,String) | Sleep(Int) | Skip

message UIID {
  enum UIIDType {
     R_ID    = 1;
     NAME_ID = 2;
  }
  required UIIDType idType = 1;
  optional int32 rid = 2;
  optional string nameid = 3;
}

message XYCoordin {
   required int32 x = 1;
   required int32 y = 2;
}

message AppEvent {
  enum AppEventType {
    CLICK  = 1;
    LONGCLICK = 2;
    DRAG  = 3;
    PINCH = 4;
    SWIPE = 5;
    TYPE  = 6;
    SLEEP = 7;
    SKIP  = 8;
  }
  required AppEventType eventType = 1;
  optional Click click = 2;
  optional LongClick longclick = 3;
  optional Drag drag   = 4;
  optional Pinch pinch = 5;
  optional Swipe swipe = 6;
  optional Type type = 7;
  optional Sleep sleep = 8;
  // optional Skip skip = 7;
}

message Click {
  required UIID uiid = 1;
}

message LongClick {
  required UIID uiid = 1;
}

message Drag {
  required UIID uiid = 1;
  required XYCoordin disp = 2;
}

message Pinch {
  required XYCoordin start = 1;
  required XYCoordin end = 2;
}

message Swipe {
  required XYCoordin start = 1;
  required XYCoordin end = 2;
}

message Type {
   required UIID uiid = 1;
   required string input = 2;
}

message Sleep {
  required int32 time = 1;
}



